<resources>
    <string name="app_name">TestNewsApp</string>
    <!--    <string name="api_key">85eb2f4fdde34960a2ae4774d5808df5</string>-->
    <string name="api_key">6469c060fbb04ce5a6a896c2f19fb8b1</string>
    <!--        <string name="api_key">74a1692513764c3e9a7aedb4a5dbc090</string>-->
    <string name="BASE_URL">https://newsapi.org/v2/</string>

    <string name="facebook_app_id">898283424170143</string>
    <string name="fb_login_protocol_scheme">fb898283424170143</string>
    <string name="facebook_application_id" translatable="false">898283424170143</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb898283424170143</string>


    <string name="text_title">The main title will be displayed here. This is true, but if it is too large, it will be partially hidden.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_email_just_txt">User email</string>
    <string name="username_just_username">Username</string>
    <string name="to_begin_just_txt">To begin</string>
    <string name="sign_out_just_txt">Sign out</string>
    <string name="log_in">log in</string>

    <string-array name="choice_items">
        <item>Country</item>
        <item>Language</item>
        <item>Sources</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>