<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg1"
        tools:context=".login.LoginActivity">

        <TextView
            android:id="@+id/login_txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_just_username"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.272" />

        <TextView
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_email_just_txt"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/login_txt_name"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/login_txt_name"
            app:layout_constraintTop_toBottomOf="@+id/login_txt_name"
            app:layout_constraintVertical_bias="0.109" />

        <Button
            android:id="@+id/btn_signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:backgroundTint="#EC6161"
            android:text="@string/sign_out_just_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email"
            app:layout_constraintVertical_bias="0.263" />

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:backgroundTint="#EC6161"
            android:text="@string/log_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signout"
            app:layout_constraintVertical_bias="0.104" />

        <Button
            android:id="@+id/btn_to_begin_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#5270DF"
            android:text="@string/to_begin_just_txt"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_log_in"
            app:layout_constraintVertical_bias="0.649" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
